--- a/bibliography.bib
+++ b/bibliography.bib
@@ -752,6 +752,65 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{hirata04,
+       author = {{Hirata}, Christopher M. and {Seljak}, Uro{\v{s}}},
+        title = "{Intrinsic alignment-lensing interference as a contaminant of cosmic shear}",
+      journal = {\prd},
+     keywords = {98.80.Es, 98.62.Gq, 98.62.Sb, Observational cosmology, Galactic halos, Gravitational lenses and luminous arcs, Astrophysics},
+         year = 2004,
+        month = sep,
+       volume = {70},
+       number = {6},
+          eid = {063526},
+        pages = {063526},
+          doi = {10.1103/PhysRevD.70.063526},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0406275},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2004PhRvD..70f3526H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{bridle07,
+       author = {{Bridle}, Sarah and {King}, Lindsay},
+        title = "{Dark energy constraints from cosmic shear power spectra: impact of intrinsic alignments on photometric redshift requirements}",
+      journal = {New Journal of Physics},
+     keywords = {Astrophysics},
+         year = 2007,
+        month = dec,
+       volume = {9},
+       number = {12},
+        pages = {444},
+          doi = {10.1088/1367-2630/9/12/444},
+archivePrefix = {arXiv},
+       eprint = {0705.0166},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2007NJPh....9..444B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{joachimi11,
+       author = {{Joachimi}, B. and {Mandelbaum}, R. and {Abdalla}, F.~B. and
+         {Bridle}, S.~L.},
+        title = "{Constraints on intrinsic alignment contamination of weak lensing surveys using the MegaZ-LRG sample}",
+      journal = {\aap},
+     keywords = {cosmology: observations, gravitational lensing: weak, large-scale structure of Universe, cosmological parameters, galaxies: evolution, Astrophysics - Cosmology and Extragalactic Astrophysics},
+         year = 2011,
+        month = mar,
+       volume = {527},
+          eid = {A26},
+        pages = {A26},
+          doi = {10.1051/0004-6361/201015621},
+archivePrefix = {arXiv},
+       eprint = {1008.3491},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2011A&A...527A..26J},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+
+
+
 
 
 
